# qr-tendance

./: .env.example  .replit  Dockerfile  README_RENDER_DEPLOYMENT.md  alerts.py  app.py  auth.py  auth_config.json  build.sh  chatbot.py  database.py  deploy_checklist.md  prediction.py  pyproject.toml  render.yaml  replit.md  reports.py  requirements.txt  sample_data.py  start.sh  utils.py
.streamlit/: config.toml
