[project]
name = "dashboard-qr-pointage"
version = "2.0.0"
description = "Dashboard statistiques QR pointage - Benj Média Production"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "psycopg2-binary>=2.9.10",
    "reportlab>=4.4.2",
    "scikit-learn>=1.7.0",
    "streamlit>=1.46.1",
    "twilio>=9.6.5",
]
